# Cpp_Cockles

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build_all.bat  build_all.sh
include/base/: Base.h  Macros.h  Noncopyable.h
src/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
